MINIFICPP-1773 - Crash when using Provenance Repository in properties

Signed-off-by: Gabor Gyimesi <gamezbird@gmail.com>

This closes #1282