docker/test/integration/minifi/core/MinifiWithProvenanceRepoContainer.py
@@ -16,9 +16,6 @@
 from .MinifiContainer import MinifiContainer
 
 
-class TransientMinifiContainer(MinifiContainer):
+class MinifiWithProvenanceRepoContainer(MinifiContainer):
     def __init__(self, config_dir, name, vols, network, image_store, command=None):
-        if not command:
-            command = ["/bin/sh", "-c",
-                       "cp /tmp/minifi_config/config.yml ./conf/ && ./bin/minifi.sh start && sleep 10 && ./bin/minifi.sh stop && sleep 100"]
-        super().__init__(config_dir, name, vols, network, image_store, command)
+        super().__init__(config_dir, name, vols, network, image_store, command, engine='minifi-cpp-with-provenance-repo')
